# strive-stats

./: .gitignore  README.md
scraper/: .envrc.template  README.md  frame_data.html  main_page.html  pyproject.toml
scraper/migrations/: env.py
scraper/migrations/versions/: 0749ede18770_adds_special_moves_and_overdrives_table.py  0ee5387f1f99_adds_character_model.py  13efefa67717_splits_array_columns.py  23e6366c9f60_normalized_models.py  6332248066be_renormalizes_normal_moves_table.py  71bbada072da_normal_and_special_moves_updates.py  ae674e14f1ff_initial_revision.py  cbecba146f11_updated_models.py  d76d3331a787_new_parsed_data_models.py  dff5b4637832_make_move_fields_optional.py
scraper/output/: dustloop_tables.json  parsed_frame_data.json
scraper/output/frame_data_html/: a.b.a_frame_data.html  anji_mito_frame_data.html  asuka_r_frame_data.html  axl_low_frame_data.html  baiken_frame_data.html  bedman_frame_data.html  bridget_frame_data.html  chipp_zanuff_frame_data.html  elphelt_valentine_frame_data.html  faust_frame_data.html  giovanna_frame_data.html  goldlewis_dickinson_frame_data.html  happy_chaos_frame_data.html  i-no_frame_data.html  jack-o_frame_data.html  johnny_frame_data.html  ky_kiske_frame_data.html  leo_whitefang_frame_data.html  may_frame_data.html  millia_rage_frame_data.html  nagoriyuki_frame_data.html  patch_notes#patch_notes" title="ggst_frame_data.html  potemkin_frame_data.html  queen_dizzy_frame_data.html  ramlethal_valentine_frame_data.html  sin_kiske_frame_data.html  (+4 more)
scraper/src/: models.py
scraper/tests/: test_dustloop_spider.py
(+80 files in other folders)
