[project]
name = "scraper"
version = "0.1.0"
description = "Scraper for Dustloop frame data"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "requests>=2.31.0",
    "types-requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "types-beautifulsoup4>=4.12.0",
    "openai>=1.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[project.scripts]
scraper-cli = "scraper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
